# resume-scorer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
api/: main.py
datasets/: extracted_text_raw_dataset.csv  job_descriptions.csv  resume_jd_test_dataset.csv  resume_to_json.csv  resume_to_json_1.csv
datatypes/: env_type.py  jd_data_type.py  resume_data_type.py
evals/jd_extraction/: jd_extraction_test_0_10.json  jd_extraction_test_10_20.json  jd_extraction_test_20_30.json  jd_extraction_test_30_35.json
evals/resume_extraction/: resume_extraction_test_0_10.json  resume_extraction_test_20_30.json  resume_extraction_test_30_40.json  resume_extraction_test_50_60.json
notebooks/: JD_extraction.ipynb  resume_extraction.ipynb  resume_extraction_dataset.ipynb  resume_extraction_dataset_creation.ipynb  resume_pdf_to_text_creation.ipynb  resume_scoring.ipynb  sample.ipynb
utils/: constants.py  env.py  file-utils.py  file_utils.py  jd_model.py  jd_util.py  ollama_util.py  resume_model.py  resume_util.py  scorer.py  utility.py
