[project]
name = "resume-scorer"
version = "0.1.0"
description = "An AI tool to score a resume based on the Job Description provided"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.19.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
    "wandb>=0.27.2",
]
