[project]
name = "resume-scorer"
version = "0.1.0"
description = "An AI tool to score a resume based on the Job Description provided"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.19.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "mlx-tune>=0.4.7",
    "ollama>=0.6.2",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.1",
    "trl>=1.6.0",
    "unsloth>=2024.8",
    "wandb>=0.27.2",
]
